# eventstore_grpc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  LICENSE.md  README.md  docker-compose.yaml  eventstore.master.docker-compose.yaml  eventstore.multi.docker-compose.yaml  eventstore.single.docker-compose.yaml  index.html  main.py  mkdocs.yml  mypi.ini  objects.inv  pyproject.toml  run_cluster_info_example.py  run_streams_example.py  run_subscription_example.py  run_threading_experiment.py  run_users_example.py  sitemap.xml  vars.env
.github/workflows/: check-release-version.yaml  publish.yaml  tag-release.yaml  test.yaml
certs/ca/: ca.crt  ca.key
certs/node1/: node.crt  node.key
certs/node2/: node.crt  node.key
certs/node3/: node.crt  node.key
docs/: CNAME  gen_ref_pages.py  index.md  quickstart.md
docs/js/: custom.js
eventstore_grpc/: __init__.py  client.py  connection.py  connection_string_parser.py  constants.py  discovery.py  event_data.py  subcription_manager.py  subcriptions_manager.py  subscription.py
eventstore_grpc/gossip/: __init__.py
eventstore_grpc/mixins/: __init__.py  gossip.py  operations.py  persistent.py  projections.py  streams.py  subscriptions.py  users.py
eventstore_grpc/operations/: __init__.py  merge_indexes.py  resign_node.py  restart_persistent_subscritions.py  set_node_priority.py  shutdown.py  stop_scavenge.py
eventstore_grpc/options/: __init__.py  channel_credential.py  connection_type.py  discovery.py  dns_cluster.py  single_node.py
eventstore_grpc/persistent/: __init__.py  create.py  read.py  update.py
eventstore_grpc/projections/: __init__.py  create_continuous.py  create_one_time.py  enable.py  list.py  reset.py  result.py  statistics.py
eventstore_grpc/proto/: ClientMessageDtos_pb2.py  cluster_pb2.py  cluster_pb2_grpc.py  gossip_pb2.py  gossip_pb2_grpc.py  operations_pb2.py  operations_pb2_grpc.py  persistent_pb2.py  persistent_pb2_grpc.py  projections_pb2.py  projections_pb2_grpc.py  shared_pb2.py  streams_pb2.py  streams_pb2_grpc.py  users_pb2.py  users_pb2_grpc.py
eventstore_grpc/streams/: __init__.py  append.py  delete.py  read.py
eventstore_grpc/subscriptions/: requests_stream.py  subscription.py  subscriptions_manager.py
eventstore_grpc/users/: __init__.py  change_password.py  create.py  delete.py  details.py  enable.py  update.py
protos/ClientAPI/: ClientMessageDtos.proto
protos/Grpc/: cluster.proto  operations.proto  shared.proto  streams.proto
quickstart/: index.html
reference/eventstore_grpc/__init__/: index.html
reference/eventstore_grpc/constants/: index.html
reference/eventstore_grpc/discovery/: index.html
reference/eventstore_grpc/event_data/: index.html
scripts/: compile-protos.sh  example.py  start-eventstore-single-node.sh  stop-eventstore-single-node.sh
search/: search_index.json
src/eventstore_grpc/: __init__.py  constants.py  discovery.py  event_data.py
src/eventstore_grpc/client/: __init__.py  event_store.py  gossip.py  operations.py  persistent.py  projections.py  streams.py  subscriptions.py  users.py
src/eventstore_grpc/core/: __init__.py  auth.py  client_base.py  connection_string.py  mixin_meta.py  settings.py  transport.py
src/eventstore_grpc/gossip/: __init__.py  read.py
src/eventstore_grpc/operations/: merge_indexes.py  resign_node.py  restart_persistent_subscritions.py  set_node_priority.py  shutdown.py  start_scavenge.py  stop_scavenge.py
src/eventstore_grpc/options/: __init__.py  base_options.py  channel_credential.py  client.py  connection_type.py  discovery.py  dns_cluster.py  gossip_cluster.py  single_node.py
src/eventstore_grpc/persistent/: __init__.py  create.py  delete.py  get_info.py  list.py  read.py  replay_parked.py  update.py
src/eventstore_grpc/projections/: create_continuous.py  create_transient.py  delete.py  disable.py  list.py  reset.py  restart.py  (+4 more)
tests/: conftest.py  docker-compose.yml  shared.env  test_discovery.py  test_event_data.py
tests/client/: conftest.py  test_client.py  test_gossip.py  test_operations.py  test_persistent.py  test_projections.py  test_streams.py  test_subscriptions.py  test_users.py
tests/core/: conftest.py  test_auth.py  test_client_base.py  test_settings.py  test_transport.py
tests/fixtures/: ca.crt
tests/integration/: test_gossip.py  test_streams.py  test_users.py
tests/options/: test_base_options.py
tests/streams/: append.py
tests/subscriptions/: test_requests_stream.py  test_subscriptions_manager.py
(+123 files in other folders)
